// TraceLab AI — Database Schema (DBML)
// Paste this into https://dbdiagram.io to generate a visual ERD
// Version: 1.0 | Phase 1 — Discovery & Architecture

// ─── ENUMS ──────────────────────────────────────

// user_role
// analysis_status
// sample_status
// notification_channel
// notification_status
// report_format

// ─── TABLES ─────────────────────────────────────

Table laboratories {
  id         uuid       [pk, default: `uuid_generate_v4()`]
  name       varchar(255) [not null]
  cnpj       varchar(18)
  address    jsonb
  contact    jsonb
  settings   jsonb
  created_at timestamp  [not null, default: `now()`]

  Note: 'Root entity — all other tables link to a laboratory via laboratory_id'
}

Table users {
  id            uuid       [pk, default: `uuid_generate_v4()`]
  laboratory_id uuid       [not null, ref: > laboratories.id]
  name          varchar(255) [not null]
  email         varchar(255) [unique, not null]
  password_hash varchar(255)
  role          varchar(20) [not null, note: 'admin | lab_manager | analyst | viewer']
  is_active     boolean    [not null, default: true]
  created_at    timestamp  [not null, default: `now()`]
  updated_at    timestamp  [not null, default: `now()`]

  indexes {
    email [unique, name: 'users_email_unique']
    laboratory_id [name: 'users_laboratory_id_idx']
    (laboratory_id, role) [name: 'users_lab_role_idx']
  }
}

Table clients {
  id            uuid       [pk, default: `uuid_generate_v4()`]
  laboratory_id uuid       [not null, ref: > laboratories.id]
  name          varchar(255) [not null]
  document      varchar(30)
  contact       jsonb
  metadata      jsonb
  created_at    timestamp  [not null, default: `now()`]

  indexes {
    laboratory_id [name: 'clients_laboratory_id_idx']
    (laboratory_id, name) [name: 'clients_lab_name_idx']
  }
}

Table products {
  id            uuid       [pk, default: `uuid_generate_v4()`]
  laboratory_id uuid       [not null, ref: > laboratories.id]
  name          varchar(255) [not null]
  sku           varchar(100)
  barcode       varchar(100)
  qrcode        varchar(255)
  category      varchar(100)
  ai_tags       jsonb
  images        jsonb
  created_at    timestamp  [not null, default: `now()`]

  indexes {
    laboratory_id [name: 'products_laboratory_id_idx']
    barcode [name: 'products_barcode_idx']
    qrcode [name: 'products_qrcode_idx']
    (laboratory_id, sku) [name: 'products_lab_sku_idx']
  }
}

Table samples {
  id            uuid       [pk, default: `uuid_generate_v4()`]
  laboratory_id uuid       [not null, ref: > laboratories.id]
  client_id     uuid       [not null, ref: > clients.id]
  product_id    uuid       [ref: > products.id]
  code          varchar(100) [unique, not null]
  status        varchar(20) [not null, default: 'received', note: 'received | in_analysis | pending_review | approved | rejected | archived']
  received_at   timestamp  [not null, default: `now()`]
  collected_by  uuid       [ref: > users.id]
  metadata      jsonb
  created_at    timestamp  [not null, default: `now()`]
  updated_at    timestamp  [not null, default: `now()`]

  indexes {
    code [unique, name: 'samples_code_unique']
    client_id [name: 'samples_client_id_idx']
    product_id [name: 'samples_product_id_idx']
    (laboratory_id, status) [name: 'samples_lab_status_idx', note: 'Primary query for Kanban/pipeline views']
    (laboratory_id, received_at) [name: 'samples_lab_received_idx']
  }
}

Table analyses {
  id           uuid       [pk, default: `uuid_generate_v4()`]
  sample_id    uuid       [not null, ref: > samples.id]
  analyst_id   uuid       [not null, ref: > users.id]
  type         varchar(100) [not null]
  result       jsonb
  status       varchar(20) [not null, default: 'draft', note: 'draft | completed | validated']
  started_at   timestamp
  completed_at timestamp
  notes        text

  indexes {
    sample_id [name: 'analyses_sample_id_idx']
    analyst_id [name: 'analyses_analyst_id_idx']
    (sample_id, status) [name: 'analyses_sample_status_idx']
  }
}

Table images {
  id           uuid       [pk, default: `uuid_generate_v4()`]
  entity_type  varchar(50) [not null, note: 'sample | product | analysis']
  entity_id    uuid       [not null, note: 'Polymorphic FK — references samples.id, products.id, or analyses.id']
  url          varchar(500) [not null]
  storage_key  varchar(500) [not null, note: 'Cloudflare R2 object key']
  ocr_data     jsonb
  ai_labels    jsonb
  uploaded_by  uuid       [not null, ref: > users.id]
  created_at   timestamp  [not null, default: `now()`]

  indexes {
    (entity_type, entity_id) [name: 'images_entity_idx', note: 'Polymorphic lookup']
    uploaded_by [name: 'images_uploaded_by_idx']
  }
}

Table reports {
  id            uuid       [pk, default: `uuid_generate_v4()`]
  laboratory_id uuid       [not null, ref: > laboratories.id]
  sample_id     uuid       [not null, ref: > samples.id]
  generated_by  uuid       [not null, ref: > users.id]
  format        varchar(10) [not null, note: 'pdf | xlsx']
  file_url      varchar(500) [not null]
  created_at    timestamp  [not null, default: `now()`]

  indexes {
    laboratory_id [name: 'reports_laboratory_id_idx']
    sample_id [name: 'reports_sample_id_idx']
  }
}

Table notifications {
  id            uuid       [pk, default: `uuid_generate_v4()`]
  laboratory_id uuid       [not null, ref: > laboratories.id]
  recipient_id  uuid       [not null, ref: > users.id]
  channel       varchar(20) [not null, note: 'whatsapp | email | push']
  template      varchar(100) [not null]
  payload       jsonb      [not null]
  status        varchar(20) [not null, default: 'queued', note: 'queued | sent | failed']
  sent_at       timestamp
  created_at    timestamp  [not null, default: `now()`]

  indexes {
    laboratory_id [name: 'notifications_laboratory_id_idx']
    recipient_id [name: 'notifications_recipient_id_idx']
    (status, created_at) [name: 'notifications_status_created_idx', note: 'For queue processing queries']
  }
}

Table audit_logs {
  id          uuid       [pk, default: `uuid_generate_v4()`]
  user_id     uuid       [not null, ref: > users.id]
  action      varchar(100) [not null]
  entity_type varchar(50) [not null]
  entity_id   uuid       [not null]
  changes     jsonb
  ip_address  varchar(45)
  created_at  timestamp  [not null, default: `now()`]

  indexes {
    user_id [name: 'audit_logs_user_id_idx']
    (entity_type, entity_id) [name: 'audit_logs_entity_idx', note: 'History queries for any entity']
    created_at [name: 'audit_logs_created_at_idx']
  }

  Note: 'Append-only — no updates or deletes. Retained per LGPD requirements.'
}
